[package]
name = "canister_installer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid = { workspace = true }
canister_agent_utils = { path = "../libraries/canister_agent_utils" }
clap = { workspace = true, features = ["derive"] }
cycles_dispenser_canister = { path = "../canisters/cycles_dispenser/api" }
futures = { workspace = true }
group_canister = { path = "../canisters/group/api" }
group_index_canister = { path = "../canisters/group_index/api" }
group_index_canister_client = { path = "../canisters/group_index/client" }
ic-agent = { workspace = true }
ic-utils = { workspace = true }
market_maker_canister = { path = "../canisters/market_maker/api" }
notifications_canister = { path = "../canisters/notifications/api" }
notifications_index_canister = { path = "../canisters/notifications_index/api" }
notifications_index_canister_client = { path = "../canisters/notifications_index/client" }
online_users_canister = { path = "../canisters/online_users/api" }
proposals_bot_canister = { path = "../canisters/proposals_bot/api" }
registry_canister = { path = "../canisters/registry/api" }
storage_index_canister = { path = "../canisters/storage_index/api" }
storage_index_canister_client = { path = "../canisters/storage_index/client" }
tokio = { workspace = true, features = ["full"] }
types = { path = "../libraries/types" }
user_canister = { path = "../canisters/user/api" }
user_index_canister = { path = "../canisters/user_index/api" }
user_index_canister_client = { path = "../canisters/user_index/client" }
