[package]
name = "canister_upgrade_proposal_builder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid = { workspace = true }
clap = { workspace = true, features = ["derive"] }
ic-sns-governance = { workspace = true }
types = { path = "../libraries/types" }
