[package]
name = "canister_upgrade_proposal_builder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid = { workspace = true }
clap = { workspace = true, features = ["derive"] }
sns_governance_canister = { path = "../external_canisters/sns_governance/api" }
types = { path = "../libraries/types" }
