[package]
name = "canister_upgrader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid = { workspace = true }
canister_agent_utils = { path = "../libraries/canister_agent_utils" }
clap = { workspace = true, features = ["derive"] }
cycles_dispenser_canister = { path = "../canisters/cycles_dispenser/api" }
escrow_canister = { path = "../canisters/escrow/api" }
event_relay_canister = { path = "../canisters/event_relay/api" }
group_index_canister = { path = "../canisters/group_index/api" }
group_index_canister_client = { path = "../canisters/group_index/client" }
ic-agent = { workspace = true }
ic-utils = { workspace = true }
identity_canister = { path = "../canisters/identity/api" }
market_maker_canister = { path = "../canisters/market_maker/api" }
neuron_controller_canister = { path = "../canisters/neuron_controller/api" }
notifications_index_canister = { path = "../canisters/notifications_index/api" }
notifications_index_canister_client = { path = "../canisters/notifications_index/client" }
online_users_canister = { path = "../canisters/online_users/api" }
proposals_bot_canister = { path = "../canisters/proposals_bot/api" }
registry_canister = { path = "../canisters/registry/api" }
storage_index_canister = { path = "../canisters/storage_index/api" }
storage_index_canister_client = { path = "../canisters/storage_index/client" }
tokio = { workspace = true, features = ["full"] }
translations_canister = { path = "../canisters/translations/api" }
types = { path = "../libraries/types" }
user_canister = { path = "../canisters/user/api" }
user_index_canister = { path = "../canisters/user_index/api" }
user_index_canister_client = { path = "../canisters/user_index/client" }
