[package]
name = "data_generator"
version = "0.1.0"
authors = ["Hamish Peebles <hamishpeebles@gmail.com>", "Matt Grogan <megrogan@gmail.com>", "Julian Jelfs <julian.jelfs@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
canister_client = { path = "../libraries/canister_client" }
clap = { version = "3.0.14", features = ["derive"] }
futures = "0.3.21"
group_canister = { path = "../canisters/group/api" }
ic-agent = "0.20.0"
lipsum = "0.8.0"
rand = "0.7.3"
tokio = { version = "1.10.0", features = ["full"] }
types = { path = "../libraries/types" }
user_canister = { path = "../canisters/user/api" }
utils = { path = "../libraries/utils" }
