[package]
name = "integration_tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
candid = { workspace = true }
group_canister = { path = "../canisters/group/api" }
group_index_canister = { path = "../canisters/group_index/api" }
ic-state-machine-tests = { workspace = true }
itertools = { workspace = true }
lazy_static = { workspace = true }
local_user_index_canister = { path = "../canisters/local_user_index/api" }
notifications_canister = { path = "../canisters/notifications/api" }
notifications_index_canister = { path = "../canisters/notifications_index/api" }
online_users_canister = { path = "../canisters/online_users/api" }
proposals_bot_canister = { path = "../canisters/proposals_bot/api" }
rand = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
serde_json = { workspace = true }
storage_bucket_canister = { path = "../canisters/storage_bucket/api" }
storage_index_canister = { path = "../canisters/storage_index/api" }
test-case = { workspace = true }
types = { path = "../libraries/types" }
user_canister = { path = "../canisters/user/api" }
user_index_canister = { path = "../canisters/user_index/api" }
utils = { path = "../libraries/utils" }
