[package]
name = "integration_tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
candid = { workspace = true }
community_canister = { path = "../canisters/community/api" }
cycles_dispenser_canister = { path = "../canisters/cycles_dispenser/api" }
group_canister = { path = "../canisters/group/api" }
group_index_canister = { path = "../canisters/group_index/api" }
ic-cdk = { workspace = true }
ic-ledger-types = { workspace = true }
ic-test-state-machine-client = { workspace = true }
itertools = { workspace = true }
lazy_static = { workspace = true }
ledger_utils = { path = "../libraries/ledger_utils" }
local_user_index_canister = { path = "../canisters/local_user_index/api" }
notifications_canister = { path = "../canisters/notifications/api" }
notifications_index_canister = { path = "../canisters/notifications_index/api" }
online_users_canister = { path = "../canisters/online_users/api" }
proposals_bot_canister = { path = "../canisters/proposals_bot/api" }
rand = { workspace = true }
registry_canister = { path = "../canisters/registry/api" }
serde = { workspace = true }
serde_bytes = { workspace = true }
serial_test = "2.0.0"
storage_bucket_canister = { path = "../canisters/storage_bucket/api" }
storage_index_canister = { path = "../canisters/storage_index/api" }
test-case = { workspace = true }
types = { path = "../libraries/types" }
user_canister = { path = "../canisters/user/api" }
user_index_canister = { path = "../canisters/user_index/api" }
utils = { path = "../libraries/utils" }
