[package]
name = "integration_tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
airdrop_bot_canister = { path = "../canisters/airdrop_bot/api" }
candid = { workspace = true }
community_canister = { path = "../canisters/community/api" }
constants = { path = "../libraries/constants" }
cycles_dispenser_canister = { path = "../canisters/cycles_dispenser/api" }
cycles_minting_canister = { path = "../external_canisters/cmc/api" }
escrow_canister = { path = "../canisters/escrow/api" }
event_relay_canister = { path = "../canisters/event_relay/api" }
event_store_canister = { workspace = true }
group_canister = { path = "../canisters/group/api" }
group_index_canister = { path = "../canisters/group_index/api" }
ic-ledger-types = { workspace = true }
ic-stable-structures = { workspace = true }
icrc-ledger-types = { workspace = true }
identity_canister = { path = "../canisters/identity/api" }
itertools = { workspace = true }
jwt = { path = "../libraries/jwt" }
jwt-simple = { workspace = true }
lazy_static = { workspace = true }
ledger_utils = { path = "../libraries/ledger_utils" }
local_user_index_canister = { path = "../canisters/local_user_index/api" }
msgpack = { path = "../libraries/msgpack" }
notifications_canister = { path = "../canisters/notifications/api" }
notifications_index_canister = { path = "../canisters/notifications_index/api" }
online_users_canister = { path = "../canisters/online_users/api" }
openchat_installer_canister = { path = "../canisters/openchat_installer/api" }
pocket-ic = { workspace = true }
proposals_bot_canister = { path = "../canisters/proposals_bot/api" }
rand = { workspace = true }
registry_canister = { path = "../canisters/registry/api" }
serde = { workspace = true }
serde_json = { workspace = true }
sha256 = { path = "../libraries/sha256" }
sign_in_with_email_canister = { workspace = true }
sign_in_with_email_canister_test_utils = { workspace = true }
storage_bucket_canister = { path = "../canisters/storage_bucket/api" }
storage_index_canister = { path = "../canisters/storage_index/api" }
testing = { path = "../libraries/testing" }
test-case = { workspace = true }
translations_canister = { path = "../canisters/translations/api" }
types = { path = "../libraries/types" }
user_canister = { path = "../canisters/user/api" }
user_index_canister = { path = "../canisters/user_index/api" }
utils = { path = "../libraries/utils" }
