[package]
name = "personhood_spike"
version.workspace = true
edition.workspace = true

[dependencies]
canbench-rs = { workspace = true }
candid = { workspace = true }
getrandom = { workspace = true }
ic-cdk = { workspace = true }
jpeg-encoder = "0.6"
tract-onnx = { version = "=0.21.1", default-features = false }
zune-jpeg = "0.4"
