[package]
name = "open-chat"
version = "0.1.0"
description = "OpenChat native mobile apps"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.1.1", features = [] }

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tauri = { workspace = true }
tauri-plugin-deep-link = "2"
tauri-plugin-notification = "2"
tauri-plugin-oc = { path = "../tauri-plugin-oc" }
