[package]
name = "tauri-plugin-oc"
version = "0.1.0"
edition.workspace = true
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-oc"

[dependencies]
serde = { workspace = true }
tauri = { workspace = true }
thiserror = { workspace = true }

[build-dependencies]
tauri-plugin = { version = "2.3.1", features = ["build"] }
