[package]
name = "tauri-plugin-oc"
version = "0.1.0"
edition.workspace = true
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-oc"

[dependencies]
futures-util = "0.3"
mime_guess = "2.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
semver = "1.0"
serde = { workspace = true }
serde_json = { workspace = true }
tauri = { workspace = true }
tauri-plugin-android-fs = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs", "io-util"] }
zip = "2.2.2"

[build-dependencies]
tauri-plugin = { version = "2.4.0", features = ["build"] }

[features]
store = []
