[package]
name = "oc_bots_sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid = { workspace = true }
ct-codecs = { workspace = true }
p256 = { workspace = true, features = ["ecdsa", "pkcs8"] }
serde = { workspace = true }
serde_json = { workspace = true }
