[package]
name = "legacy_bot_api"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true }
types = { path = "../../libraries/types" }
user_canister = { path = "../../canisters/user/api" }
