[package]
name = "legacy_bot_c2c_client"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
legacy_bot_api = { path = "../api" }
candid = { workspace = true }
canister_client = { path = "../../libraries/canister_client" }
ic-cdk = { workspace = true }
msgpack = { path = "../../libraries/msgpack" }
tracing = { workspace = true }
types = { path = "../../libraries/types" }
