[package]
name = "activity_notification_state"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid = { workspace = true }
serde = { workspace = true }
types = { path = "../types" }

