[package]
name = "canister_agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid = { workspace = true }
canister_client_macros = { path = "../canister_client_macros" }
cycles_dispenser_canister = { path = "../../canisters/cycles_dispenser/api" }
dirs = { workspace = true }
futures = { workspace = true }
group_canister = { path = "../../canisters/group/api" }
group_index_canister = { path = "../../canisters/group_index/api" }
group_index_canister_client = { path = "../../canisters/group_index/client" }
ic-agent = { workspace = true }
ic-utils = { workspace = true }
itertools = { workspace = true }
notifications_canister = { path = "../../canisters/notifications/api" }
notifications_index_canister = { path = "../../canisters/notifications_index/api" }
notifications_index_canister_client = { path = "../../canisters/notifications_index/client" }
proposals_bot_canister = { path = "../../canisters/proposals_bot/api" }
serde = { workspace = true }
storage_index_canister = { path = "../../canisters/storage_index/api" }
storage_index_canister_client = { path = "../../canisters/storage_index/client" }
types = { path = "../types" }
user_canister = { path = "../../canisters/user/api" }
user_index_canister = { path = "../../canisters/user_index/api" }
user_index_canister_client = { path = "../../canisters/user_index/client" }
online_users_canister = { path = "../../canisters/online_users/api" }
