[package]
name = "canister_agent_utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid = { workspace = true }
dirs = { workspace = true }
ic-agent = { workspace = true }
ic-utils = { workspace = true }
itertools = { workspace = true }
types = { path = "../types" }
