[package]
name = "canister_agent_utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid = { workspace = true }
dfx-core = { git = "https://github.com/hpeebles/dfinity-sdk", rev = "0683b5440c318723a2f1fc5931074313d52c922b" }
dirs = { workspace = true }
ic-agent = { workspace = true }
ic-utils = { workspace = true }
itertools = { workspace = true }
slog = { workspace = true }
types = { path = "../types" }
