[package]
name = "canister_agent_utils"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid = { workspace = true }
ic-agent = { workspace = true }
ic-utils = { workspace = true }
itertools = { workspace = true }
types = { path = "../types" }
