[package]
name = "canister_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid = { workspace = true }
canister_client_macros = { path = "../canister_client_macros" }
ic-cdk = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
