[package]
name = "canister_client"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid = { workspace = true }
canister_client_macros = { path = "../canister_client_macros" }
ic-cdk = { workspace = true }
tracing = { workspace = true }
