[package]
name = "canister_client_macros"
version = "0.1.0"
authors = ["Hamish Peebles <hamishpeebles@gmail.com>", "Matt Grogan <megrogan@gmail.com>", "Julian Jelfs <julian.jelfs@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
garcon = { workspace = true, optional = true }

[features]
ingress = ["garcon"]
