[package]
name = "chat_events"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid = { workspace = true }
event_store_producer = { workspace = true, features = ["json"] }
hex = { workspace = true }
ic-ledger-types = { workspace = true }
itertools = { workspace = true }
ledger_utils = { path = "../ledger_utils" }
rand = { workspace = true }
search = { path = "../search" }
serde = { workspace = true }
serde_bytes = { workspace = true }
sha2 = { workspace = true }
types = { path = "../types" }

[dev-dependencies]
msgpack = { path = "../msgpack" }
