[package]
name = "chat_events"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid = { workspace = true }
constants = { path = "../constants" }
event_store_producer = { workspace = true, features = ["json"] }
event_store_producer_cdk_runtime = { workspace = true }
hex = { workspace = true }
ic-cdk = { workspace = true }
ic-ledger-types = { workspace = true }
ic-stable-structures = { workspace = true }
itertools = { workspace = true }
ledger_utils = { path = "../ledger_utils" }
msgpack = { path = "../msgpack" }
rand = { workspace = true }
search = { path = "../search" }
serde = { workspace = true }
serde_bytes = { workspace = true }
sha2 = { workspace = true }
stable_memory_map = { path = "../stable_memory_map" }
tracing = { workspace = true }
types = { path = "../types" }

[dev-dependencies]
msgpack = { path = "../msgpack" }
test-case = { workspace = true }
testing = { path = "../testing" }
