[package]
name = "dynamodb_index_store"
version = "0.1.0"
authors = ["Hamish Peebles <hamishpeebles@gmail.com>", "Matt Grogan <megrogan@gmail.com>", "Julian Jelfs <julian.jelfs@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
aws-types = { workspace = true }
index_store = { path = "../index_store" }
types = { path = "../types" }
