[package]
name = "dynamodb_index_store"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
aws-types = { workspace = true }
index_store = { path = "../index_store" }
types = { path = "../types" }
