[package]
name = "email_magic_links"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true, features = ["derive"] }
email_utils.path = "../email_utils"
hex.workspace = true
ic_principal.workspace = true
rand.workspace = true
rmp-serde.workspace = true
rsa = { workspace = true, features = ["sha2"] }
serde.workspace = true
serde_json.workspace = true
serde_with = { workspace = true, features = ["hex"] }
sha256.path = "../../libraries/sha256"
sign_in_with_email_canister.path = "../../canisters/sign_in_with_email/api"
