[package]
name = "email_utils"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
email_address.workspace = true
rsa.workspace = true
serde.workspace = true
serde_bytes.workspace = true
sha2.workspace = true
sign_in_with_email_canister.path = "../../canisters/sign_in_with_email/api"